@@ -109,7 +109,7 @@ class EventBasedRiskTestCase(CalculatorTestCase):
         # Turkey with SHARE logic tree
         out = self.run_calc(case_4.__file__, 'job.ini',
                             exports='csv', individual_curves='true')
-        fname = out['avg_losses-stats', 'csv']
+        [fname] = out['avg_losses-stats', 'csv']
         self.assertEqualFiles('expected/avg_losses-mean.csv', fname)
 
         fnames = out['agg_loss_table', 'csv']
